[package]
name = "katex-doc"
version = "0.0.2"
authors = ["Christopher Durham <cad97@cad97.com>"]
include = ["src/lib.rs", "Cargo.toml", "katex.html"]
license = "Unlicense OR MIT"
description = "WIP: XaaS for KaTeX on docs.rs"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.0.2/katex.html",
]
